Made some basic css fixes. Nav fixed, login/signup aligned. Also fixed item_id to id

--- a/public/styles.css
+++ b/public/styles.css
@@ -288,3 +288,26 @@ h2{
 #footer {
   text-align: center;
 }
+
+/* Login and Sign-up start */
+.login-signup-heading {
+  text-align: center;
+}
+
+.login-signup-container {
+  display: flex;
+  justify-content: center;
+}
+
+#username {
+  display: block;
+}
+
+#password {
+  display: block;
+}
+
+#email {
+  display: block;
+}
+/* Login and Sign-up end */
